@@ -2,16 +2,36 @@ package org.monarchinitiative.phenopacket2prompt.output.impl.english;
 
 import org.monarchinitiative.phenol.base.PhenolRuntimeException;
 import org.monarchinitiative.phenopacket2prompt.model.*;
+import org.monarchinitiative.phenopacket2prompt.output.PPKtBuildingBlockGenerator;
 import org.monarchinitiative.phenopacket2prompt.output.PPKtIndividualInfoGenerator;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
+
+/**
+ * This class produces the very first sentence of the prompt, e.g.,
+ * <pre>
+ * "The proband was a 22-year-old woman who presented at the age of 13 years with ..."
+ * </pre>
+ * <p>
+ * There are eight possible cases to take into account, depending on whether we have the age of onset and
+ * the age at last presentation (this makes 2^2=4 cases), and whether there are observed HPO terms at onset,
+ * which influences whether we can write "who presented with" or
+ * "in whom the "following clinical manifestations were excluded".
+ * </p>
+ * <p>
+ * The entry point to the generation of this sentence is the function {@code #getIndividualDescription}.
+ * </p>
+ */
 public class PpktIndividualEnglish implements PPKtIndividualInfoGenerator {
 
-    public PpktIndividualEnglish() {
+    private final PPKtBuildingBlockGenerator buildBlocks;
 
+    public PpktIndividualEnglish() {
+        buildBlocks = new PPKtEnglishBuildingBlocks();
     }
 
 
@@ -19,53 +39,42 @@ public class PpktIndividualEnglish implements PPKtIndividualInfoGenerator {
         if (individual.annotationCount() == 0) {
             throw new PhenolRuntimeException("No HPO annotations");
         }
+        boolean hasObservedHPO = individual.hasObservedPhenotypeFeatureAtOnset();
         Optional<PhenopacketAge> lastExamOpt = individual.getAgeAtLastExamination();
         Optional<PhenopacketAge> onsetOpt = individual.getAgeAtOnset();
         PhenopacketSex psex = individual.getSex();
         if (lastExamOpt.isPresent() && onsetOpt.isPresent()) {
-            return onsetAndLastEncounterAvailable(psex, lastExamOpt.get(), onsetOpt.get());
+            return onsetAndLastEncounterAvailable(psex, lastExamOpt.get(), onsetOpt.get(), hasObservedHPO);
         } else if (lastExamOpt.isPresent()) {
-            return lastEncounterAvailable(psex, lastExamOpt.get());
+            return lastEncounterAvailable(psex, lastExamOpt.get(), hasObservedHPO);
         } else if (onsetOpt.isPresent()) {
-            return onsetAvailable(psex, onsetOpt.get());
+            return onsetAvailable(psex, onsetOpt.get(), hasObservedHPO);
         } else {
-            return ageNotAvailable(psex);
+            return ageNotAvailable(psex, hasObservedHPO);
         }
     }
 
+
+    /**
+     * NOTE THIS SHOULD BE REMOVED
+     * @param psex
+     * @return
+     */
     @Override
     public String heSheIndividual(PhenopacketSex psex) {
         return switch (psex) {
-            case FEMALE -> "she";
-            case MALE -> "he";
-            default -> "the individual";
+            case FEMALE -> buildBlocks.she();
+            case MALE -> buildBlocks.he();
+            default -> buildBlocks.theIndividual();
         };
     }
 
 
-    private String iso8601ToYear(Iso8601Age iso8601Age) {
-        return String.format("%d-year old", iso8601Age.getYears());
-    }
-
-    private String iso8601ToYearMonth(Iso8601Age iso8601Age) {
-        if (iso8601Age.getMonths() == 0) {
-            return String.format("%d-year old", iso8601Age.getYears());
-        } else {
-            return String.format("%d-year, %d-month old", iso8601Age.getYears(), iso8601Age.getMonths());
-        }
-    }
-
+/*
     private String iso8601ToMonthDay(Iso8601Age iso8601Age) {
-        int m = iso8601Age.getMonths();
-        int d = iso8601Age.getDays();
-        if (m == 0) {
-            return String.format("%d-day old", d);
-        } else if (d>0){
-            return String.format("%d-month, %d-day old", m, d);
-        } else {
-            return String.format("%d-month old", m);
-        }
+        return buildBlocks.monthDayOld(iso8601Age.getMonths(), iso8601Age.getDays());
     }
+ */
 
     /**
      * Create a phrase such as "at the age of 7 years, 4 months, and 2 days"
@@ -77,42 +86,39 @@ public class PpktIndividualEnglish implements PPKtIndividualInfoGenerator {
         List<String> components = new ArrayList<>();
 
         if (isoAge.getYears()>0) {
-            String ystring = isoAge.getYears() == 1 ? "year" : "years";
-            components.add(String.format("%d %s", isoAge.getYears(), ystring));
+            components.add(buildBlocks.years(isoAge.getYears()));
         }
         if (isoAge.getMonths() > 0) {
-            String mstring = isoAge.getMonths() == 1 ? "month" : "months";
-            components.add(String.format("%d %s", isoAge.getMonths(), mstring));
+            components.add(buildBlocks.months(isoAge.getMonths()));
         }
         if (isoAge.getDays()>0) {
-            String dstring = isoAge.getDays() == 1 ? "day" : "days";
-            components.add(String.format("%d %s", isoAge.getDays(), dstring));
+            components.add(buildBlocks.months(isoAge.getDays()));
         }
         if (components.isEmpty()) {
-            return "as a newborn";
+            return buildBlocks.asNewborn();
         } else if (components.size() == 1) {
-            return "at the age of " + components.get(0);
+            return buildBlocks.atTheAgeOf() + " " + components.getFirst();
         } else if (components.size() == 2) {
-            return "at the age of " + components.get(0) + " and " + components.get(1);
+            return buildBlocks.atTheAgeOf() + " " + components.get(0) + " and " + components.get(1);
         } else {
-            return "at the age of " + components.get(0) + "m " + components.get(1) +
+            return buildBlocks.atTheAgeOf() + " " + components.get(0) + ", " + components.get(1) +
                     ", and " + components.get(2);
         }
     }
 
     private String onsetTermAtAgeOf(HpoOnsetAge hpoOnsetTermAge) {
         if (hpoOnsetTermAge.isFetus()) {
-            return  "in the fetal period";
+            return  buildBlocks.inFetalPeriod();
         } else if (hpoOnsetTermAge.isCongenital()) {
-            return  "at birth";
+            return  buildBlocks.isCongenital();
         } else if (hpoOnsetTermAge.isInfant()) {
-            return "as an infant";
+            return buildBlocks.asInfant();
         } else if (hpoOnsetTermAge.isChild()) {
-            return "in childhood";
+            return buildBlocks.inChildhood();
         } else if (hpoOnsetTermAge.isJuvenile()) {
-            return "as an adolescent";
+            return buildBlocks.asAdolescent();
         } else {
-            return "in adulthood";
+            return buildBlocks.inAdulthoold();
         }
     }
 
@@ -123,87 +129,110 @@ public class PpktIndividualEnglish implements PPKtIndividualInfoGenerator {
         int d = iso8601Age.getDays();
         // if older
         if (y>17) {
+            String age = buildBlocks.yearsOld(y);
             return switch (psex) {
-                case FEMALE -> String.format("%d-year old woman", y);
-                case MALE -> String.format("%d-year old man", y);
-                default -> String.format("%d-year old individual", y);
+                case FEMALE -> String.format("%s %s", age, buildBlocks.woman());
+                case MALE -> String.format("%s %s", age, buildBlocks.man());
+                default -> String.format("%s %s", age, buildBlocks.individual());
             };
         } else if (y>9) {
+            String age = buildBlocks.yearsOld(y);
             return switch (psex) {
-                case FEMALE -> String.format("%d-year old adolescent female", y);
-                case MALE -> String.format("%d-year old adolescent male", y);
-                default -> String.format("%d-year old adolescent", y);
+                case FEMALE -> String.format("%s %s", age, buildBlocks.adolescentGirl());
+                case MALE -> String.format("%s %s", age, buildBlocks.adolescentBoy());
+                default -> String.format("%s %s", age, buildBlocks.adolescentChild());
             };
         } else if (y>0) {
+            String age = buildBlocks.yearsMonthsDaysOld(y, m, d);
             return switch (psex) {
-                case FEMALE -> String.format("%s girl", iso8601ToYearMonth(iso8601Age));
-                case MALE -> String.format("%s boy", iso8601ToYearMonth(iso8601Age));
-                default -> String.format("%s child", iso8601ToYearMonth(iso8601Age));
+                case FEMALE -> String.format("%s %s", age, buildBlocks.girl());
+                case MALE -> String.format("%s %s", age, buildBlocks.boy());
+                default -> String.format("%s %s", age, buildBlocks.child());
             };
         } else if (m>0 || d> 0) {
+            String age = buildBlocks.monthDayOld(m, d);
             return switch (psex) {
-                case FEMALE -> String.format("%s female infant", iso8601ToMonthDay(iso8601Age));
-                case MALE -> String.format("%s male infant", iso8601ToMonthDay(iso8601Age));
-                default -> String.format("%s infant", iso8601ToMonthDay(iso8601Age));
+                case FEMALE -> String.format("%s %s", age, buildBlocks.femaleInfant());
+                case MALE -> String.format("%s %s", age, buildBlocks.maleInfant());
+                default -> String.format("%s %s", age, buildBlocks.infant());
             };
         } else {
             return switch (psex) {
-                case FEMALE -> "newborn girl";
-                case MALE -> "newborn boy";
-                default -> "newborn";
+                case FEMALE -> buildBlocks.newbornGirl();
+                case MALE -> buildBlocks.newbornBoy();
+                default -> buildBlocks.newborn();
             };
+        }
+    }
+
+
+    private String iso8601individualDescriptionAsA(PhenopacketSex psex, Iso8601Age iAge){
+        String onsetWithSex = iso8601individualDescription(psex, iAge);
+        return String.format("as a %s", onsetWithSex);
+    }
+
+    private String hpoOnsetAsA(PhenopacketSex psex, HpoOnsetAge hpoOnsetTermAge){
+        String onsetWithSex = hpoOnsetIndividualDescription(psex, hpoOnsetTermAge);
+        final Set<Character> vowels = Set.of('A', 'E', 'I', 'O', 'U');
+        if (vowels.contains(onsetWithSex.charAt(0))) {
+            return String.format("as an %s", onsetWithSex);
+        } else {
+            return String.format("as a %s", onsetWithSex);
         }
     }
 
     private String hpoOnsetIndividualDescription(PhenopacketSex psex, HpoOnsetAge hpoOnsetTermAge) {
         if (hpoOnsetTermAge.isFetus()) {
             return switch (psex) {
-                case FEMALE -> "female fetus";
-                case MALE -> "male fetus";
-                default -> "fetus";
+                case FEMALE -> buildBlocks.femaleFetus();
+                case MALE -> buildBlocks.maleFetus();
+                default -> buildBlocks.fetus();
             };
         } else if (hpoOnsetTermAge.isCongenital()) {
             return switch (psex) {
-                case FEMALE -> "female newborn";
-                case MALE -> "male newborn";
-                default -> "newborn";
+                case FEMALE -> buildBlocks.newbornGirl();
+                case MALE ->  buildBlocks.newbornBoy();
+                default ->  buildBlocks.newborn();
             };
         } else if (hpoOnsetTermAge.isInfant()) {
             return switch (psex) {
-                case FEMALE -> "female infant";
-                case MALE -> "male infant";
-                default -> "infant";
+                case FEMALE ->  buildBlocks.femaleInfant();
+                case MALE ->  buildBlocks.maleInfant();
+                default ->  buildBlocks.infant();
             };
         } else if (hpoOnsetTermAge.isChild()) {
             return switch (psex) {
-                case FEMALE -> "girl";
-                case MALE -> "boy";
-                default -> "child";
+                case FEMALE -> buildBlocks.girl();
+                case MALE -> buildBlocks.boy();
+                default -> buildBlocks.child();
             };
         } else if (hpoOnsetTermAge.isJuvenile()) {
             return switch (psex) {
-                case FEMALE -> "female adolescent";
-                case MALE -> "male adolescent";
-                default -> "adolescent";
+                case FEMALE -> buildBlocks.adolescentGirl();
+                case MALE ->  buildBlocks.adolescentBoy();
+                default ->  buildBlocks.adolescentChild();
             };
         }else {
             return switch (psex) {
-                case FEMALE -> "woman";
-                case MALE -> "man";
-                default -> "adult";
+                case FEMALE -> buildBlocks.woman();
+                case MALE -> buildBlocks.male();
+                default -> buildBlocks.adult();
             };
         }
     }
 
     /**
-     * A sentence such as The proband was a 39-year old woman who presented at the age of 12 years with
+     * A sentence such as The proband was a 39-year-old woman who presented at the age of 12 years with
      * HPO1, HPO2, and HPO3. HPO4 and HPO5 were excluded. This method returns the phrase that ends with "with"
      * @param psex
      * @param lastExamAge
      * @param onsetAge
      * @return
      */
-    private String onsetAndLastEncounterAvailable(PhenopacketSex psex, PhenopacketAge lastExamAge, PhenopacketAge onsetAge) {
+    private String onsetAndLastEncounterAvailable(PhenopacketSex psex,
+                                                  PhenopacketAge lastExamAge,
+                                                  PhenopacketAge onsetAge,
+                                                  boolean hasObservedHPO) {
         String individualDescription;
         String onsetDescription;
         if (lastExamAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
@@ -211,7 +240,7 @@ public class PpktIndividualEnglish implements PPKtIndividualInfoGenerator {
             individualDescription = iso8601individualDescription(psex, isoAge);
         } else if (lastExamAge.ageType().equals(PhenopacketAgeType.HPO_ONSET_AGE_TYPE)) {
             HpoOnsetAge hpoOnsetTermAge = (HpoOnsetAge) lastExamAge;
-            individualDescription = hpoOnsetIndividualDescription(psex,hpoOnsetTermAge);
+            individualDescription = hpoOnsetAsA(psex,hpoOnsetTermAge);
         } else {
             // should never happen
             throw new PhenolRuntimeException("Did not recognize last exam age type " + lastExamAge.ageType());
@@ -226,17 +255,31 @@ public class PpktIndividualEnglish implements PPKtIndividualInfoGenerator {
             // should never happen
             throw new PhenolRuntimeException("Did not recognize onset age type " + onsetAge.ageType());
         }
-        return String.format("The proband was a %s who presented %s with", individualDescription, onsetDescription);
+        if (hasObservedHPO) {
+            return String.format("%s %s who presented %s with",
+                    buildBlocks.probandWasA(),
+                    individualDescription,
+                    onsetDescription);
+        } else {
+            // i.e., we only have excluded HPO terms at onset
+            return String.format("%s %s %s %s:",
+                    buildBlocks.probandWasA(),
+                    individualDescription,
+                    buildBlocks.inWhomManifestationsWereExcluded(),
+                    onsetDescription);
+        }
     }
 
 
     /**
      * Age at last examination available but age of onset not available
-     * The proband was a 39-year old woman who presented with HPO1, HPO2, and HPO3. HPO4 and HPO5 were excluded.
+     * The proband was a 39-year-old woman who presented with HPO1, HPO2, and HPO3. HPO4 and HPO5 were excluded.
      * @param psex
      * @param lastExamAge
      */
-    private String lastEncounterAvailable(PhenopacketSex psex, PhenopacketAge lastExamAge) {
+    private String lastEncounterAvailable(PhenopacketSex psex,
+                                          PhenopacketAge lastExamAge,
+                                          boolean hasObservedHPO) {
         String individualDescription;
         if (lastExamAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
             Iso8601Age isoAge = (Iso8601Age) lastExamAge;
@@ -248,39 +291,80 @@ public class PpktIndividualEnglish implements PPKtIndividualInfoGenerator {
             // should never happen
             throw new PhenolRuntimeException("Did not recognize last exam age type " + lastExamAge.ageType());
         }
-        return String.format("The proband was a %s who presented with", individualDescription);
+        if (hasObservedHPO) {
+            return String.format("%s %s %s",
+                    buildBlocks.probandWasA(),
+                    individualDescription,
+                    buildBlocks.whoPresented());
+        } else {
+            return String.format("%s %s %s",
+                    buildBlocks.probandWasA(),
+                    individualDescription,
+                    buildBlocks.inWhomManifestationsWereExcluded());
+        }
     }
 
     /**
      * Age at last examination not available but age of onset available
      * The proband  presented  at the age of 12 years with HPO1, HPO2, and HPO3. HPO4 and HPO5 were excluded.
-     * @param psex
-     * @param onsetAge
+     * @param psex sex of the proband
+     * @param onsetAge age at onset of disease
+     * @param hasObservedHPO whether the proband has HPO annotations for the onset of disease
      * @return
      */
-    private String onsetAvailable(PhenopacketSex psex, PhenopacketAge onsetAge) {
+    private String onsetAvailable(PhenopacketSex psex,
+                                  PhenopacketAge onsetAge,
+                                  boolean hasObservedHPO) {
         String onsetDescription;
+        String individualDescription;
         if (onsetAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
             Iso8601Age isoAge = (Iso8601Age) onsetAge;
-            onsetDescription = iso8601AtAgeOf(isoAge);
+            individualDescription = iso8601individualDescriptionAsA(psex, isoAge);
         } else if (onsetAge.ageType().equals(PhenopacketAgeType.HPO_ONSET_AGE_TYPE)) {
             HpoOnsetAge hpoOnsetTermAge = (HpoOnsetAge) onsetAge;
-            onsetDescription = onsetTermAtAgeOf(hpoOnsetTermAge);
+            individualDescription = hpoOnsetAsA(psex,hpoOnsetTermAge);
         } else {
             // should never happen
             throw new PhenolRuntimeException("Did not recognize onset age type " + onsetAge.ageType());
         }
-        return String.format("The proband presented %s with", onsetDescription, onsetDescription);
+        if (hasObservedHPO) {
+            // e.g., "The proband presented in childhood with"
+            return String.format("%s %s %s",
+                    buildBlocks.probandNoAgePresented(),
+                    individualDescription,
+                    buildBlocks.with());
+        } else {
+            return String.format("%s %s %s",
+                    buildBlocks.probandNoAgePresented(),
+                    individualDescription,
+                    buildBlocks.inWhomManifestationsWereExcluded());
+        }
+
     }
 
-    private String ageNotAvailable(PhenopacketSex psex) {
-        return switch (psex) {
-            case FEMALE -> "The proband was a female who presented with";
-            case MALE -> "The proband was a male who presented with";
-            default -> "The proband presented with";
-        };
+    /**
+     * This method is called if we have no information at all about the age of the proband
+     * @param psex Sex of the proband
+     * @return A string such as  "The proband was a female who presented with";
+     */
+    private String ageNotAvailable(PhenopacketSex psex,
+                                   boolean hasObservedHPO) {
+        if (hasObservedHPO) {
+            return switch (psex) {
+                case FEMALE -> buildBlocks.probandFemaleNoAgePresentedWith();
+                case MALE -> buildBlocks.probandMaleNoAgePresentedWith();
+                default -> buildBlocks.probandNoAgePresentedWith();
+            };
+        } else {
+            return switch (psex) {
+                case FEMALE -> buildBlocks.probandFemaleNoAgeExcludedOnly();
+                case MALE -> buildBlocks.probandMaleNoAgeExcludedOnly();
+                default -> buildBlocks.probandNoAgeExcludedOnly();
+            };
+        }
     }
 
+    /*
     private String individualName(PpktIndividual individual) {
         PhenopacketSex psex = individual.getSex();
         Optional<PhenopacketAge> ageOpt = individual.getAgeAtLastExamination();
@@ -297,9 +381,9 @@ public class PpktIndividualEnglish implements PPKtIndividualInfoGenerator {
         PhenopacketAge age = ageOpt.get();;
         if (age.isChild()) {
             return switch (psex) {
-                case FEMALE -> "girl";
-                case MALE -> "boy";
-                default -> "child";
+                case FEMALE -> buildBlocks.girl();
+                case MALE -> buildBlocks.boy();
+                default -> buildBlocks.child();
             };
         } else if (age.isCongenital()) {
             return switch (psex) {
@@ -321,33 +405,15 @@ public class PpktIndividualEnglish implements PPKtIndividualInfoGenerator {
             };
         } else {
             return switch (psex) {
-                case FEMALE -> "woman";
-                case MALE -> "man";
-                default -> "individual";
+                case FEMALE -> buildBlocks.woman();
+                case MALE -> buildBlocks.man();
+                default -> buildBlocks.inAdulthoold();
             };
         }
     }
+*/
 
 
-
-  /*  @Override
-    public String individualWithAge(PhenopacketAge ppktAge) {
-        if (ppktAge.ageType().equals(PhenopacketAgeType.ISO8601_AGE_TYPE)) {
-            return  ppktAge.age() + " old";
-        } else if (ppktAge.ageType().equals(PhenopacketAgeType.HPO_ONSET_AGE_TYPE)) {
-            String label = ppktAge.age(); // something like "Infantile onset"
-            return switch (label) {
-                case "Infantile onset" -> "infant";
-                case "Childhood onset" -> "child";
-                case "Neonatal onset"  -> "neonate";
-                case "Congenital onset" -> "born";
-                case "Adult onset" -> "adult";
-                default-> String.format("During the %s", label.replace(" onset", ""));
-            };
-        } else {
-            return ""; // should never get here
-        }
-    }*/
 
     @Override
     public String atAge(PhenopacketAge ppktAge) {
